--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -51,17 +51,8 @@ ul.breadcrumbs {
     padding: 0;
 }
 
-ul.breadcrumbs li::after {
-    content: ">>";
-    margin: 0 5px;
-}
-
-ul.breadcrumbs li:last-child::after{
-    content: "";
-    margin: 0 5px;
-}
-
-ul.breadcrumbs a {
+ul.breadcrumbs a,
+ul.breadcrumbs i {
     text-decoration: none;
 }
 
