navigation to text

--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -51,9 +51,12 @@ ul.breadcrumbs {
     padding: 0;
 }
 
-ul.breadcrumbs a,
-ul.breadcrumbs i {
+ul.breadcrumbs a {
     text-decoration: none;
+}
+
+ul.breadcrumbs i {
+    margin: 0 5px;
 }
 
 button.join-block {
