--- a/frontend/src/styles/general/ScenesPage.css
+++ b/frontend/src/styles/general/ScenesPage.css
@@ -85,32 +85,6 @@
     text-align: justify;
 }
 
-.sidebar-container {
-    box-sizing: border-box;
-    display: block;
-    height: 100vh;
-    left:-300px;
-    padding: 0;
-    position:fixed;
-    top: 45px;
-    width: 300px;
-    transition: all 0.5s;
-}
-
-.sidebar-container.open {
-    left:0;
-    transition: all 0.5s;
-}
-
-.sidebar-container .sidebar {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    height:100%;
-    padding: 30px 15px 15px 15px;
-    position: relative;
-}
-
 .main-content {
     padding: 0px;
     transition: all 0.5s;
@@ -121,32 +95,9 @@
     transition: all 0.5s;
 }
 
-.open-sidebar {
-    align-items: center;
-    box-sizing: border-box;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-    display: flex;
-    height: 40px;
-    justify-content: center;
-    opacity: 1;
-    position: absolute;
-    right: -25px;
-    top: 5px;
-    transition: right 0.5s;
-    width: 25px;
-}
-
-.sidebar-container.open .open-sidebar {
-    opacity: 0;
-    right: 0px;
-    transition: right 0.5s;
-}
-
-.close-sidebar {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+.main-content.right-open {
+    padding-right: 300px;
+    transition: all 0.5s;
 }
 
 .new-scene {
