--- a/frontend/src/styles/mobile/index.css
+++ b/frontend/src/styles/mobile/index.css
@@ -13,19 +13,27 @@
     .sidebar-container.open,
     .sidebar-container.right.open,
     .sidebar-container.mobile-sidebar > .right > .left,
-    .sidebar-container.mobile-sidebar > .left > .right  {
+    .sidebar-container.mobile-sidebar > .left > .right,
+    .sidebar-container .open-sidebar,
+    .sidebar-container .sidebar  {
         display: none;
     }
 
     .sidebar-container.mobile-sidebar,
     .sidebar-container.mobile-sidebar > .right > .right,
-    .sidebar-container.mobile-sidebar > .left > .left {
+    .sidebar-container.mobile-sidebar > .left > .left,
+    .sidebar-container.mobile-sidebar .sidebar {
         display: block;
     }
-
-    
+    .sidebar-container.mobile-sidebar .open-sidebar {
+        display: flex;
+    }
    
     .main-content.right-open {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .main-content.right-open.open {
         padding-left: 300px;
         padding-right: 0;
     }
@@ -84,10 +92,14 @@
     .sidebar {
         width:100%;
     }
+    
 
-    .main-content.open {
+    .main-content.open,
+    .main-content.right-open.open,
+    .main-content.right-open {
         width: 100%;
         padding: 0px;
+        padding-left: 0px;
     }
 
     .main-content, .main-content.open{
@@ -114,10 +126,7 @@
     }
 
     .sidebar-container .sidebar {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 0;
+        justify-content: flex-start;
     }
 
     .page-content{
@@ -188,9 +197,6 @@
         top: 0;
     }
 
-    .sidebar-container .sidebar {
-        padding: 20px;
-    }
 }
 
 @media screen and (max-width: 300px){
