--- a/frontend/src/styles/color-scheme.css
+++ b/frontend/src/styles/color-scheme.css
@@ -227,7 +227,8 @@ footer,
 .sidebar button,
 .mobile-nav span:hover,
 h3.entities-top-link,
-.tile-position.over {
+.tile-position.over,
+.sidebar-tabs-navigation button {
     background-color: var(--bg-color2);
 }
 
@@ -245,7 +246,8 @@ footer button,
 .sidebar button[disabled],
 .sidebar button[disabled]:hover,
 .mobile-nav span:hover,
-h3.entities-top-link {
+h3.entities-top-link,
+.sidebar-tabs-navigation button {
     color: var(--text-color2);
 }
 
@@ -256,7 +258,8 @@ footer a:hover,
 .navbar a:hover,
 footer button:hover,
 .profile-dropdown button:hover,
-h3.entities-top-link a:hover {
+h3.entities-top-link a:hover,
+.sidebar-tabs-navigation button:hover {
     color: var(--text-hover2);
 }
 
@@ -274,11 +277,13 @@ h3.entities-top-link a:hover {
 .sidebar button[disabled],
 .sidebar button[disabled]:hover,
 .open-sidebar,
-.connect-block {
+.connect-block,
+.sidebar-tabs-navigation button.active {
     background-color: var(--bg-color3);
 }
 
-.book-content {
+.book-content,
+.sidebar-tabs-navigation button.active {
     border-color: var(--bg-color3);
 }
 
