--- a/frontend/src/styles/general/Homepage.css
+++ b/frontend/src/styles/general/Homepage.css
@@ -27,3 +27,11 @@
     justify-content: space-between;
     padding: 6px;
   }
+
+  
+/*RESPONSIVE*/
+@media screen and (max-width: 725px){
+  .home-logo-navbar {
+      width: 100%;
+  }
+}
