--- a/frontend/src/styles/general/Navigation.css
+++ b/frontend/src/styles/general/Navigation.css
@@ -81,3 +81,27 @@
 .page-title {
   font-size: 30px;
 }
+
+/*RESPONSIVE*/
+@media screen and (max-width: 725px){
+  .navbar {
+      min-width: 200px;
+  }
+}
+
+@media screen and (max-width: 500px){
+  .logout span {
+      display: none;
+  }
+
+  .logout i {
+      display: inline-block;
+  }
+  
+  .navbar {
+      flex-direction: column;
+      position: relative;
+      height: auto;
+  }
+
+}
