--- a/frontend/src/styles/general/Sidebar.css
+++ b/frontend/src/styles/general/Sidebar.css
@@ -134,6 +134,15 @@
     display: none;
 }
 
+@media screen and (max-width: 1130px){
+    .main-content.open.right-open .book-cover, 
+    .main-content.open.right-open .preview-tile,
+    .main-content.open.right-open .add-entity,
+    .main-content.open.right-open .tile-position {
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 900px){
     .sidebar-container.desktop-only  {
         display: none;
@@ -142,5 +151,65 @@
     .sidebar-container.mobile-only {
         display: block;
     }
+    
+    .main-content.right-open {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
+    .main-content.right-open.open {
+        padding-left: 300px;
+        padding-right: 0;
+    }
+
+}
+
+
+@media screen and (max-width: 600px) {
+    .sidebar {
+        width:100%;
+    }
+
+    .main-content.open,
+    .main-content.right-open.open,
+    .main-content.right-open {
+        width: 100%;
+        padding: 0px;
+        padding-left: 0px;
+    }
+
+    .main-content, .main-content.open{
+        padding-top: 0;
+        padding-left: 0;
+    }
+
+    .sidebar-container{
+        width: 100%;
+        left: -100%;
+        padding: 0;
+    }
+    
+    .sidebar-container.open {
+        left: 0;
+    }
+
+    .sidebar-container .sidebar {
+        justify-content: flex-start;
+    }
+
+    .page-content{
+        padding: 50px 0;
+    }
+
+}
+
+@media screen and (max-width: 500px){
+    .page-content {
+        padding: 15px 0;
+        position: relative;
+    }
+
+    .sidebar-container {
+        top: 0;
+    }
 }
