--- a/frontend/src/styles/general/EntityDetails.css
+++ b/frontend/src/styles/general/EntityDetails.css
@@ -10,6 +10,11 @@
     text-align: center;
 }
 
+.entity-details .book-image {
+    max-width: 80%;
+    max-height: 300px;
+}
+
 .entity-details .book-title {
     font-size: 24px;
     text-align: center;
