--- a/frontend/src/styles/general/Sidebar.css
+++ b/frontend/src/styles/general/Sidebar.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
     display: block;
     height: 100vh;
-    left:-300px;
+    left: -300px;
     padding: 0;
-    position:fixed;
+    position: fixed;
     top: 45px;
     transition: all 0.5s;
     width: 300px;
@@ -20,9 +20,17 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
-    height:100%;
-    padding: 30px 15px 15px 15px;
+    height: 100%;
+    padding: 35px 0px 30px 0px;
     position: relative;
+}
+
+.tab-content, .content {
+    height: calc(100% - 100px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 0 15px 30px 15px;
+    width:100%;
 }
 
 .open-sidebar {
