--- a/frontend/src/styles/general/EntityDetails.css
+++ b/frontend/src/styles/general/EntityDetails.css
@@ -2,7 +2,9 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    min-width: 265px;
+    max-width: 300px;
 }
 
 .entity-details .book-type {
